--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,27 @@
+body{
+    background-color: rgba(231, 235, 228, 0.715);
+}
 
-/* 
+h1 {
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: auto;
+    font-style: normal;
+  }
+ul{
+    padding-left: 30rem;
+    list-style-type: none;
+  }
 
-    You can write your own styles here...
+li{
+    border: solid 1px black;
+    height:75px;
+    width: 400px;
+    box-shadow: 10px;
+}
+ 
+
+    /*You can write your own styles here...
     
     
     ...Or you can use the import command to include 
